--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-rate-limit": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
+    "multer": "1.4.5-lts.1",
     "nodemon": "^3.1.0",
     "universal-cookie": "^7.1.0",
     "uuid": "^9.0.1"
